--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,10 @@
             <type>jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        <groupId>io.reactivex</groupId>
+        <artifactId>rxjava</artifactId>
+        <version>1.1.5</version>
+    </dependency>
     </dependencies>
 </project>
