--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,17 @@
     <artifactId>ServerCommunication</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>Server Communication</name>
+    <url>https://github.com/Exorath/ServerCommunication</url>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <build>
         <plugins>
             <plugin>
@@ -43,9 +54,39 @@
                     <finalName>uber-${project.artifactId}-${project.version}</finalName>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/staging</outputDirectory>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                    <repositoryOwner>Exorath</repositoryOwner>
+                    <repositoryName>ServerCommunication</repositoryName>
+                    <branch>refs/heads/mvn-repo</branch>
+                    <message>Deploy artifacts for ${project.version}</message>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals><goal>site</goal></goals>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
+    <properties>
+        <github.global.server>github</github.global.server>
+    </properties>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>servercommunication-staging</id>
+            <url>file://${project.build.directory}/staging/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -96,4 +137,5 @@
         <version>1.1.5</version>
     </dependency>
     </dependencies>
+
 </project>
